<?xml version="1.0" encoding="utf-8"?>

<!--
    Montreal Just in Case
    Copyright (C) 2011  Mudar Noufal <mn@mudar.ca>

    Geographic locations of public safety services. A Montreal Open Data
    project.

    This file is part of Montreal Just in Case.

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<resources>
    <!--Titles-->
    <string name="app_name">MTL Just in Case</string>
    <string name="title_activity_main">@string/app_name</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_eula">End User License Agreement</string>
    <string name="title_activity_about_libs">Acknowledgements</string>

    <!--Share-->
    <string name="share_intent_title">Discover Montréal Just in Case on Google Play</string>

    <!--BottomNav tabs-->
    <string name="btn_fire_halls">Fire Stations</string>
    <string name="btn_spvm_stations">Police Stations</string>
    <string name="btn_heat_wave">Heat Wave</string>
    <string name="btn_emergency_hostels">Emgcy Hostels</string>
    <string name="btn_health">Health</string>

    <!--Menus-->
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_share">Share</string>
    <string name="action_rate">Rate</string>
    <string name="action_eula">License</string>
    <string name="action_about_libs">Open source libraries</string>

    <!--FloatingActionMenu-->
    <!--<string name="fab_menu_label_layers">Subcategories</string>-->
    <string name="fab_label_air_conditioning">Air conditioning</string>
    <string name="fab_label_pools">Pools</string>
    <string name="fab_label_wading_pools">Wading pools</string>
    <string name="fab_label_play_fountains">Play fountains</string>
    <string name="fab_label_hospitals">Hospitals</string>
    <string name="fab_label_clsc">CLSC</string>

    <!--Buttons-->
    <string name="btn_ok">OK</string>
    <string name="btn_retry">Retry</string>
    <string name="btn_device_settings">Device settings</string>
    <string name="btn_zoom_out">Zoom out</string>
    <string name="btn_accept_eula">Accept &amp; continue</string>
    <string name="btn_close">Close</string>

    <!--Dialogs-->
    <string name="dialog_open_data_title">Open Data credits</string>

    <!--InfoWindow-->
    <string name="info_window_snippet_distance">%1$s\r\nDistance: %2$s</string>

    <!--Search-->
    <string name="search_hint">Postal code or place name</string>

    <!-- About -->
    <string name="about_title">Montréal Just in Case</string>
    <string name="about_subtitle">Geographic locations of public safety services</string>
    <string name="about_intro">In case of emergency, please contact the city’s security services directly. Do not rely on information provided here as it will not contain the updated security measures.</string>
    <string name="about_open_data">This app is powered by the City of&#160;Montréal Open&#160;Data Portal, in compliance with its Open&#160;Data license.</string>
    <string name="about_source_code">Source code is released under the GPLv3 license from the Free Software Foundation.</string>
    <string name="about_credits_dev">Android app developed by Mudar&#160;Noufal.</string>
    <string name="about_montreal_ouvert">An Open Data project done in collaboration with Montréal&#160;ouvert.</string>

    <!--Settings-->
    <string name="prefs_default_value_lang">en</string>
    <string name="prefs_language_title">Language</string>
    <string name="prefs_language_dialog_title">Set language</string>
    <string name="prefs_language_french">Français</string>
    <string name="prefs_language_english">English</string>
    <string name="prefs_units_title">Distance units system</string>
    <string name="prefs_units_dialog_title">Set units system</string>
    <string name="prefs_units_iso">Metric (km)</string>
    <string name="prefs_units_imperial">Imperial (mile)</string>
    <string name="prefs_permissions_title">My location</string>
    <string name="prefs_permissions_summary">Select Permissions &gt; enable Location</string>
    <string name="prefs_version_title">Version</string>

    <!--Showcase/Tips-->
    <string name="showcase_map_layers_title">Map layers</string>
    <string name="showcase_map_layers_desc">Tap to select categories visible on the map</string>

    <!--Units-->
    <string name="placemark_distance_iso">%.1f km</string>
    <string name="placemark_distance_iso_min">&lt; 100 m</string>
    <string name="placemark_distance_imp">%.1f mi</string>
    <string name="placemark_distance_imp_feet">%s ft</string>
    <string name="placemark_distance_imp_min">&lt; 200 ft</string>

    <!--Snackbar messages-->
    <string name="snackbar_api_error_code">Server error: code %d</string>
    <string name="snackbar_api_error_message">Server error: %1$s [%2$d]</string>
    <string name="snackbar_host_unknown_error_message">Server connection error [%1$d]</string>
    <string name="snackbar_empty_map_visible_region">The map’s visible region does not contain any places.</string>
    <string name="snackbar_location_permission_needed">Location permission is needed to show your position on the map.</string>
    <string name="snackbar_location_permission_denied">If you change your mind, you can go to settings to grant the location permission.</string>
    <string name="snackbar_google_maps_error">Error loading Google Maps…</string>

    <!--Accessibility-->
    <string name="desc_montreal">City of Montréal</string>
    <string name="desc_github">GitHub repository</string>
    <string name="desc_credits">Credits</string>
    <string name="desc_montreal_ouvert">Montréal ouvert</string>

</resources>
