<?xml version="1.0" encoding="utf-8"?>
<tabs>
    <tab
        barColorWhenSelected="@color/color_fire_halls"
        icon="@drawable/ic_fire_hall"
        id="@+id/tab_fire_halls"
        title="@string/btn_fire_halls" />

    <tab
        barColorWhenSelected="@color/color_spvm"
        icon="@drawable/ic_spvm"
        id="@+id/tab_spvm"
        title="@string/btn_spvm_stations" />

    <tab
        barColorWhenSelected="@color/color_heat_wave"
        icon="@drawable/ic_water_supplies"
        id="@+id/tab_water_supplies"
        title="@string/btn_heat_wave" />

    <tab
        barColorWhenSelected="@color/color_emergency_hostels"
        icon="@drawable/ic_emergency_hostels"
        id="@+id/tab_emergency_hostels"
        title="@string/btn_emergency_hostels" />

    <tab
        barColorWhenSelected="@color/color_health"
        icon="@drawable/ic_hospitals"
        id="@+id/tab_hospitals"
        title="@string/btn_health" />

</tabs>