<?xml version="1.0" encoding="utf-8"?>

<!--
    Montreal Just in Case
    Copyright (C) 2011  Mudar Noufal <mn@mudar.ca>

    Geographic locations of public safety services. A Montreal Open Data
    project.

    This file is part of Montreal Just in Case.

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/tab_fire_halls"
        android:icon="@drawable/ic_fire_hall"
        android:title="@string/btn_fire_halls" />

    <item
        android:id="@+id/tab_spvm"
        android:icon="@drawable/ic_spvm"
        android:title="@string/btn_spvm_stations" />

    <item
        android:id="@+id/tab_water_supplies"
        android:icon="@drawable/ic_water_supplies"
        android:title="@string/btn_heat_wave" />

    <item
        android:id="@+id/tab_emergency_hostels"
        android:icon="@drawable/ic_emergency_hostels"
        android:title="@string/btn_emergency_hostels" />

    <item
        android:id="@+id/tab_hospitals"
        android:icon="@drawable/ic_hospitals"
        android:title="@string/btn_health" />
</menu>
